Fix background scaling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,9 @@ body {
   background: #4c4c4c;
   color: #fff;
 }
+
+@media only screen and (max-width: 700px) {
+  body {
+    background-size: 200% 100%;
+  }
+}
